update: center img slider bugfix: slider img overflow is hidden

--- a/public/css/oifunding.css
+++ b/public/css/oifunding.css
@@ -1089,6 +1089,7 @@ img.tabicon {
     max-width: 1020px;
     margin: auto;
     position: relative;
+    overflow: hidden;
 }
 .slider {
     float: right;
