--- a/public/css/oifundingmobile.css
+++ b/public/css/oifundingmobile.css
@@ -3,7 +3,9 @@
 @media screen and (max-width:1025px){
 /*    les deux images apparaissent sous le text*/
     #rocket {opacity: 0.3;position: absolute;}
-    .sliderimg {opacity: 0.3;position: absolute;top: 10px;margin: 0 30%;}
+    .sliderimg {opacity: 0.3;position: absolute;top: 10px;}
+    .sliderimgcloser1 {margin-left: 30%;}
+    .sliderimgcloser2, .sliderimgcloser3 {margin-left: 20%;}
     .sliderimgcloser4 {margin-left: -10px;}
     #catcher {padding: 1%;}
     .slider {float: none; width: auto;}
